components/kubernetes/gravitee-ingress-routes/apim/gravitee-apim-ui-ingress-routes.yaml
# apiVersion: traefik.containo.us/v1alpha1
# kind: IngressRoute
# metadata:
#   name: http-gravitee-apim-ui
#   namespace: default
# spec:
#   entryPoints:
#     # - web
#     - default
#   routes:
#   - match: Host(`gravitee-apim-mgmt.mycompany.io`) && PathPrefix(`/notls`)
#     kind: Rule
#     services:
#     # ---
#     # Who am i ? I am Saint Nectaire.
#     # ---
#     # 'gravitee-apim' is the helm relase name for my Helm dployment of
#     # Gravtiee AM  : should be in a valuees.yaml for a helm chart.
#     - name: gravitee-apim-mgmt
#       port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: https-gravitee-apim-ui
  namespace: default
spec:
  entryPoints:
    # ok, "websecure" est un référence au nom d'un "containerPort" pour le "kind: Deployment" de "Traefik" (et non pas whoami)
    # en gros, c'est poru dire "dans quel utyau, le http, ou le https, je mets mon app?"
    - websecure
  routes:
    # PathPrefix(`/ui`) # PathPrefix(`/am/ui`) # PathPrefix(`/dashboard`)
  # - match: Host(`gravitee-apim-mgmt.mycompany.io`) && PathPrefix(`/portal`)
  - match: Host(`gravitee-apim-mgmt.mycompany.io`) && PathPrefix(`/`)
  # - match: Host(`gravitee-apim-mgmt.mycompany.io`) && PathPrefix(`/am/ui`)
    kind: Rule
    services:
    - name: gravitee-apim-ui
      port: 8002 # cf. [kubectl describe service/gravitee-apim-management-ui|grep 'Port:']
    # middlewares:
      # - name: my-api-uicors
  tls:
    certResolver: default
    # certResolver: gio-pki
